--- a/CSS/website_style.css
+++ b/CSS/website_style.css
@@ -337,6 +337,14 @@ footer {
     background-color: goldenrod; 
 }
 
+.Column_6 {
+    width: 100%;
+    padding: 10px;
+    padding-top: 1.9%;
+    height: 400px;
+    background-color: black; 
+}
+
 .row:after {
     content: "";
     display: table;
